# C-Projects

Balls/: CMakeLists.txt  main.cpp
Balls/Header Files/: Game.h  Player.h  SwagBall.h
Balls/Source Files/: Game.cpp  Player.cpp  SwagBall.cpp
HelloSFML/: CMakeLists.txt  main.cpp
HelloSFML/Source Files/: Game.cpp  Game.h
